frontend/test/should_fail/disallow_redeclaration_of_builtin_global_procedure.grg
procedure addCopy(n:Node)
{
}

rule r
{
	n:N;
	
	modify
	{
		eval {
			addCopy(n);
		}
	}
}
